css/index.css
/* Colors */
:root {
--brand: LightSeaGreen;
--fg:#011529;
--fg-2:#123;
--fg-3:#001119;
--dark:#000510;
--light:#fff;

--bg:#fff;
--bg-1:#f4f7fa;
--bg-2:#f4f7fa;
--bg-3:#e2e6ea;
--comment:CadetBlue;
--highlight:Coral;
--focus:PaleGoldenrod;
--tone-1:Turquoise;
--tone-2:Aquamarine;
--neutral:SlateGray;
--layout-spacing: max(9vh, 4rem);
font-size: 1.3em;
  font-size: clamp(1.2rem, 0.7153rem + 1.6368vw, 2rem);
}



::selection{background-color:var(--tone-2); color:var(--dark);}

a[href]{text-decoration: none;}
*,*::before,*::after {box-sizing: border-box; margin:0;}


body {
display: flex;
flex-direction: column;
min-height: 100vh;
padding: 5vh clamp(1rem, 5vw, 3rem) 1rem;
font-family: system-ui, sans-serif;
color: #222;
}

body > * {
  font-family: system-ui, sans-serif;
font-weight: 300;
width: 100%;
line-height: 1.5;
max-width: 70ch;
margin-left: auto;
margin-right: auto;
}


main {
margin-top: var(--layout-spacing);
}

footer {
max-width: 100%;
margin-top: auto;
padding-top: var(--layout-spacing);
}

:is(h1, h2, h3) {
line-height: 1.1;
}


a.direct-link{color:transparent !important  ;transition: transform .2s ease;  transform:translate(-.5rem,0); background-repeat:no-repeat;eat;background-size: 60%; opacity:0;background-repeat:none; background-position: 50% 50%; background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 10 10' fill='none' stroke='%23888' stroke-linecap='round'%3E%3Cpath transform='rotate(-45deg)' transform-origin='50%25 50%25' d='M 5.5 4.5 Q 4.5 3.4 3 4.6 L 1.5 6 A 1 1 0 0 0 3.5 8.5 L 4 8 M 4.3 6.4 Q 5.3 7.3 6.4 6.2 L 8.6 4 A 1 1 0 0 0 6 2 L 5.5 2.5' /%3E%3C/svg%3E");}

h2:hover a.direct-link{opacity:.5; transform:none}
/*article anchors */
.docnav { display: grid; grid-template-columns: 1fr 1fr; box-shadow: 0 -.1em var(--bg-2); padding: 1em 0;}
.docnav a{display:grid; background-color: var(--bg-2); padding: 1em;}
article a.direct-link{ font-weight:300; font-style:normal; font-size:1rem; width: 2rem; height:2rem; line-height:2rem; display:inline-block;  text-align:center; }
article header h1{margin-bottom:.5em;}
article h1{font-size: 5rem;font-weight:800; color:var(--neutral);}
article h1,
article h2,
article h3,
article h4{position:relative}
article img{display:block;max-width: 100%; margin-left:  auto; margin-right:auto;}
article .direct-link{position:absolute; left:-2em; top:0; margin:0;}

article * + * {
margin-top: 2em;
}
article ul{list-style: none; padding:0; margin-top:.5em;}
article ul > li{position:relative; padding-left: 2em; margin: .5em 0  0  0 ;}
article ul > li:before{content:""; position:absolute;  top:.25em; left:0;display:block; width:1em; height:1em; border-radius: 1em; box-shadow: inset 0 0 0 .15em var(--tone-1);}

body { 
background-color:var(--bg); color:var(--fg); margin:0 auto;}


.home svg{height:4em; width: 4em; }

body > header  {   width: 100%; display: grid; height:3em;   align-items: center;
grid-template-columns: fit-content(10ch) minmax(min(50vw, 30ch), 1fr);}





header a{ color: currentcolor;}


nav{display:grid;  width: 100%;     grid-template-columns: 1fr 1fr 1fr 1fr;align-content: center;  justify-content: center;
justify-items: center; grid-auto-flow: column;  place-content:center;align-items:center;}
nav a{width:100%;text-align:center;padding:1em; background-color:var(--bg); color: var(--brand);}
nav .active{box-shadow:  0  .4em 0 -.2em var(--tone-1); color: currentcolor;}
nav .home{padding:0; text-align: left;     place-self: start;}

time{color: var(--neutral);}



article{
  max-width: 50em; 
  margin:0 auto; }


a[href]{  color: var(--brand); outline:none;}
.article p a[href]{text-decoration:underline;

text-decoration-color: var(--neutral);
text-decoration-thickness: .05em;
text-underline-offset: .05em;
text-decoration-skip-ink: all;}

h2:target{box-shadow: 0 -.2rem var(--highlight);}
h2:target::after,
h3:target::after{content:" ←"; color: var(--highlight);}






.article  a.tag{display:inline-block; border-radius: .333em;  box-shadow: 0 0 0 .05em ; padding: .333em .77em; margin: 0 0 0 .4em  ; color: var(--brand);}
.article  a.tag{font-size:.8em;}



.postlist a{text-align:left;margin:.5em 0;border-radius:.7em;  display: grid;font-weight:600;grid-auto-flow: column; padding:1.5em clamp(1rem, 7%, 5rem);background-color: var(--bg-2)}
.postlist a:hover{background-color: var(--tone-1); color:var(--dark); }
.postlist time{text-align:right;color:  var(--neutral);font-weight:300; font-size:.8em;}
.postlist a:hover time {color: var(--bg-2);}



footer{text-align:center;color: var(--neutral);margin:2em 0;  padding-top:0; border-top: .1em solid var(--bg-2); }
footer > section{ margin:1em auto;display:grid;   grid-auto-flow: row; grid-template-rows: auto; grid-template-columns: 1fr 1fr  1fr  1fr   1fr ;align-content: center;}
footer a[href]{border-radius: .4em; overflow:hidden;min-width: 4em; min-height:4em; position:relative; text-transform: uppercase; letter-spacing:.1em;  display:grid;   justify-content: center; align-content: center;text-align: center} 
 
footer > section a svg{transform:translate(0,1em); stroke-linejoin:round;margin:1em auto; transition: transform .15s ease; color:var(--fg); stroke-opacity:.75;}
footer a b {color:var(--fg); font-size: .7em;white-space:nowrap;transition: transform .2s cubic-bezier(.5,.3,.2,1); }
footer a:hover b {opacity:1; transform: translate(0,-2.5em)   ;}
footer a:not(:hover) b{opacity:0; transform: translate(0,-2em)  }
footer a:hover{color: var(--fg); background-color:var(--bg-2); }
footer > section a:hover svg{transform:translate(0,.5em) scale(2);   stroke-opacity:.2; }

 

.post-tag[href]{display:inline-block;padding:.5em 1em; border-radius: .4em;margin:.51em; color: var(--light); background-color: var(--brand);}


pre {
;
line-height:2em;
direction: ltr;
text-align: left;
white-space: pre;
word-spacing: normal;
word-break: normal;
tab-size: 2;
hyphens: none;
padding:2em;
font-size:.8em;background-color:var(--dark);color:var(--light); border-radius:.66em;
}
.button{padding: 1.2em 2em; border-radius:.3em; display:inline-block; margin:1em; box-shadow: 0 0 0 .1em}
 
pre{}

pre,code{ font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New",    monospace;}

code{word-break:break-all; }


.highlight-line{display:block;text-decoration:none;color:inherit;padding: 1em;}
mark{background-color:var(--focus)}
.highlight-line:empty:before{content:" "}

.token.comment,.token.prolog,.token.doctype,.token.cdata{color:var(--comment)}
.token.attr-value,.token.keyword,.token.control,.token.directive,.token.unit{color:var(--tone-2)}
.token.null,.token.operator,.token.boolean,.token.number{color:var(--highlight)}
.token.punctuation{color:var(--neutral)}
.highlight-line-add{background-color:var(--fg-2)}
.highlight-line-remove{color:var(--comment);background-color:var(--fg-3)}

pre{overflow:auto;}
/*inline code fix */ :not(pre) > code { padding: .1em;border-radius: .3em;}

p > code{font-size:.8em;user-select:all;background-color: var(--fg-2); padding: .3em .7em; white-space:nowrap; color:var(--bg-2)}

@media(prefers-color-scheme:light){p>code{background-color:transparent;  color:var(--neutral);box-shadow: inset 0 0 0 .1em var(--bg-2);  }}
@media(prefers-color-scheme:dark){
:root{
--brand: LightSeaGreen;

--bg:#011529;
--bg-2:#123;
--bg-3:#000818;

--fg:#e2e6ec;
--fg-2:#fff;
--fg-3:#f5f5f5;

--comment:CadetBlue;
--highlight:Coral;
--focus:PaleGoldenrod;
--tone-1:Aquamarine;
--tone-2:Turquoise;
--neutral:SlateGray;


}
}

.highlight-line-add{background-color: var(--bg-2);}
.highlight-line-remove{background-color: #000;}



@media (max-width:40em){
footer a b{display:none}
footer > section a:hover svg{stroke-opacity:1;}
footer > section a svg{margin:0 auto; transform:none !important;}footer section {grid-auto-flow: row;  grid-template-columns: 1fr  1fr   1fr 1fr  1fr}footer a:not(:hover) span{opacity:1}}


@media (max-width:25em){ footer section{grid-template-columns:   1fr    1fr   }}


@media (min-width:85em){ footer section{grid-template-columns:   1fr  1fr  1fr  1fr  1fr   1fr  1fr  1fr   1fr   1fr}}



.namespace {  opacity: .7;}
.token.property {  color: #f4bf75;}
.token.tag {   color: #66d9ef;} 
.token.string {    color: #a1efe4;} 
.token.selector {  color: #ae81ff;}
.token.attr-name { color: #fd971f;} 
.token.entity,
.token.url, 
.language-css .token.string,
.style .token.string {  color: #a1efe4;}

.token.statement,
.token.regex, 
.token.atrule { 
  color: #a1efe4;
}

.token.placeholder,
.token.variable {
  color: #66d9ef;
} 

.token.important {
  color: #f92672;
  font-weight: bold;
} 

.token.entity {
  cursor: help;
} 

pre > code.highlight {
  outline: .4em solid red;
  outline-offset: .4em;
} 

